configure for db